# cambium

./: .env.example  .gitignore  .npmrc  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  SECURITY.md  npm-shrinkwrap.json  package-lock.json  package.json  tsconfig.json  vitest.config.ts
.claude/agents/: cambium-docs.md  cambium-security.md
.forgejo/workflows/: ci-review.yml
cli/: cambium.mjs  compile.mjs  contracts-emitter.mjs  doctor.mjs  env-discovery.mjs  generate.mjs  init.mjs  inspect.mjs  lint.mjs  replay.mjs  scaffold-tool.mjs  schedule.mjs  serve.mjs  stdin-arg.mjs  workspace-shape.mjs
cli/schedule-targets/: crontab.mjs  github-actions.mjs  index.mjs  k8s-cronjob.mjs  render-cron.mjs  systemd.mjs
crates/cambium-agent/: Cargo.toml
crates/cambium-agent/src/: agent.rs  frame.rs  lib.rs  main.rs  mounts.rs  net.rs  protocol.rs  spawn.rs
docs/: Firecracker Ecosystem — Contribution Directions.md  Generation Engineering DSL (Rails-style) - Spec Draft.md  Generation Engineering DSL — Reference Implementation (v0).md  bulletins.md
docs/GenDSL Docs/: 00 - Getting Started.md  01 - Core Concepts.md  C - IR (Intermediate Representation).md  C - Repair Loop.md  C - Runner (TS runtime).md  C - Schema Description (auto-generated).md  C - Serve Mode.md  C - Signals, State, and Triggers.md  C - Trace (observability).md  D - Grounding Sources.md  D - Packages & Workspaces (Scale-Invariant).md  D - Schemas (JSON Schema).md  D - Tools Registry.md  Generation Engineering DSL — Docs Map (Knowledge Graph).md  N - Agentic Transactions.md  N - App Mode vs Engine Mode (RED-220).md  N - Corrector Multi-Attempt (RED-296).md  N - Engine-Mode Corrector Registry Isolation (RED-281).md  N - Failure Modes & Debugging.md  N - GAIA Benchmark Evaluation.md  N - Log Primitive (RED-282).md  N - Model Identifiers.md  N - Orchestration Layer.md  N - Prior-Run State Accessors (RED-241).md  N - Scheduled Gens (RED-273).md  N - VS Code Language Server.md  N - Visual Trace Renderer.md  NP9QAB~E.MD  P - GenModel.md  (+21 more)
firecracker-testbed/: Dockerfile  README.md  docker-compose.yml  fc_vsock_probe.py  netns-preflight.sh  smoke.sh  snapshot-spike.sh  virtio-blk-preflight.sh
scripts/: check-dep-ages.mjs  check-ruby-compat.mjs  check-ruby-deps.mjs  gaia-eval.ts  postpack.mjs  pre-publish-check.mjs  prepack.mjs  test-on-ruby.mjs
src/: agentic-inline-toolcalls.regression.test.ts  agentic-inline-toolcalls.test.ts  budget-tracking.test.ts  budget.test.ts  budget.ts  compound.ts  enrich.ts  gaia-eval.test.ts  graph-view.ts  inline-tool-calls.ts  ir.ts  runner.ts  schema-describe.test.ts  schema-describe.ts  schema-validation.test.ts  signals.ts  step-handlers.ts  trace.ts  triggers.test.ts  triggers.ts
(+61 files in other folders)
