[package]
name = "cambium-agent"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
description = "Guest agent for Cambium's :firecracker exec substrate. Runs inside the sandbox VM; listens on vsock, dispatches guest code, returns a structured response."
license = "MIT"
publish = false

[[bin]]
name = "cambium-agent"
path = "src/main.rs"

[lib]
name = "cambium_agent"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# vsock is Linux-only (AF_VSOCK is a Linux kernel feature). Gated as
# a target-specific dep so the crate still builds on macOS / Windows
# for development and test runs; the binary's main() on non-Linux
# targets refuses to run with a clear message.
[target.'cfg(target_os = "linux")'.dependencies]
vsock = "0.5"

[dev-dependencies]
# Kept minimal by design — the protocol + framing modules test themselves
# with stdlib Cursor/Vec. Any dev-dep bloat on the critical guest binary
# would pad the rootfs unnecessarily. The one exception is `tempfile`,
# which net.rs tests need to point `append_hosts_entries` at a throwaway
# path (so tests don't need root + can't clobber the host's /etc/hosts).
tempfile = "3"

[profile.release]
# Tight release profile for the guest binary — strip symbols, LTO, and
# opt-level "z" (smallest). ~3-5 MB static binary is the target; a chunky
# agent inflates the rootfs for no gain (we're CPU-bound on exec, never
# on agent startup).
lto = true
codegen-units = 1
opt-level = "z"
strip = "symbols"
panic = "abort"
